// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput Component FileInput handle add file successfully through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file successfully through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            hello.png
             (5 Bytes)
          </div>
        </div>
        <div
          class="right"
        >
          <progress
            class="progress"
            max="100"
            value="50"
          />
          <svg
            aria-hidden="true"
            class="icon gds-loader size-1x spinner-icon"
            data-testid="TEST-ID-spinner"
            focusable="false"
            height="50"
            icon="fal,spinner"
            preserveAspectRatio="xMidYMid"
            role="img"
            style="background: transparent;"
            viewBox="0 0 100 100"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="transparent"
              r="30"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="10"
            >
              <animatetransform
                attributeName="transform"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                type="rotate"
                values="0 50 50;180 50 50;720 50 50"
              />
              <animate
                attributeName="stroke-dasharray"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                values="20 150; 150 20; 20 150"
              />
            </circle>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file successfully through input 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            hello.png
             (5 Bytes)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container error"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,exclamation-triangle"
            />
          </div>
          <div
            class="name"
            data-testid="TEST-ID-download"
            tabindex="-1"
          >
            hello.png
             (5 Bytes)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
        </div>
      </div>
      <div>
        Internal Error
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file with timeout through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file with timeout through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container error"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,exclamation-triangle"
            />
          </div>
          <div
            class="name"
            data-testid="TEST-ID-download"
            tabindex="-1"
          >
            hello.png
             (5 Bytes)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
        </div>
      </div>
      <div>
        Timeout
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input highlight"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop of file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop of file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            file1.pdf
          </div>
        </div>
        <div
          class="right"
        >
          <progress
            class="progress"
            max="100"
            value="0"
          />
          <svg
            aria-hidden="true"
            class="icon gds-loader size-1x spinner-icon"
            data-testid="TEST-ID-spinner"
            focusable="false"
            height="50"
            icon="fal,spinner"
            preserveAspectRatio="xMidYMid"
            role="img"
            style="background: transparent;"
            viewBox="0 0 100 100"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="transparent"
              r="30"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="10"
            >
              <animatetransform
                attributeName="transform"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                type="rotate"
                values="0 50 50;180 50 50;720 50 50"
              />
              <animate
                attributeName="stroke-dasharray"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                values="20 150; 150 20; 20 150"
              />
            </circle>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop without dataTransfer 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop without dataTransfer 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle unsuccessfull add file when quota reached 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle unsuccessfull add file when quota reached 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
      <div
        class="item-container error"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,exclamation-triangle"
            />
          </div>
          <div
            class="name"
            data-testid="TEST-ID-download"
            tabindex="-1"
          >
            hello.png
             (5 Bytes)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
        </div>
      </div>
      <div>
        Quota exceeded: Maximum number of files reached
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles correctly deletion when no handler defined 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles correctly deletion when no handler defined 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles delete rejections of a file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles delete rejections of a file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download without download callback 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download without download callback 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
            tabindex="0"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            data-testid="TEST-ID-delete"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    data-testid="TEST-ID-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    data-testid="TEST-ID-confirm"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput renders 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            tabindex="0"
          >
            NAME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <button
            class="gds-button-content delete-icon"
            color="reversed"
            tabindex="0"
            type="button"
          >
            <div
              class="button-icon-container"
            >
              <i
                class="button-icon icon"
                icon="fal,trash-alt"
              />
            </div>
          </button>
          <div>
            Delete
          </div>
          <div>
            <div>
              ControlleMenu
              closed
              <div
                class="gds-popover-container"
              >
                <div
                  class="popover-title"
                >
                  Delete?
                </div>
                <div
                  class="popover-buttons"
                >
                  <button
                    class="gds-button-content"
                    color="secondary"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="gds-button-content"
                    color="primary"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button-label-container"
                    >
                      Confirm
                    </div>
                  </button>
                </div>
              </div>
              has ref
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput renders without input value 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput renders without input value 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          tabindex="-1"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;
